oziva-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oziva-namespace
  labels:
    name: oziva-namespace
