pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: database
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pgadmin.com
    http:
      paths:
      - path: 
        pathType: ImplementationSpecific
        backend:
          service:
            name: pgadmin-service
            port:
              number: 80
